--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 
+spring.datasource.url=jdbc:mysql://localhost:3306/mytaxapp
+spring.datasource.username= root
+spring.datasource.password= Dlemos2109
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+
+
+spring.jpa.hibernate.ddl-auto = update
+
+
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type=TRACE
